# Wima

./: .clang-format  .gitconfig  .gitignore  .gitmodules  CMakeLists.txt  NOTICE.md  README.md
cmake/: CMakeLists.txt  README.md  functions.cmake  macros.cmake
docs/: CMakeLists.txt  MAIN.md  README.md  doxyfile.in  main.md
include/: CMakeLists.txt  README.md  WM_main.h  draw.h  layout.h  math.h  prop.h  render.h  render.h.autosave  theme.h  ui.h  widget.h  wima.h
include/glad/: glad.h
include/wima/: CMakeLists.txt  draw.h  input.h  layout.h  math.h  prop.h  render.h  time.h  wima.h
lib/: CMakeLists.txt  memory.h
lib/glad/: CMakeLists.txt  glad.c
res/: CMakeLists.txt
scripts/: README.md  build.sh  run.sh  setup.sh
src/: CMakeLists.txt  README.md  WM_main.c  area.c  area.h  callbacks.c  callbacks.h  cursor.c  cursor.h  dialog.c  dialog.h  editor.c  editor.h  event.h  glad.c  global.c  global.h  input.c  item.c  item.h  key.c  layout.c  layout.h  math.c  math.h  menu.c  menu.h  monitor.c  old_layout.c  old_layout.h  overlay.c  overlay.h  prop.c  prop.h  region.c  region.h  time.c  tree.c  tree.h  ui.c  (+9 more)
src/area/: CMakeLists.txt  area.c  area.h  editor.c  region.c  region.h
src/areas/: area.c  area.h  editor.c  editor.h  region.c  region.h
src/bnd/: CMakeLists.txt  blendish.c  blendish.h  color.c  color.h  theme.h
src/color/: CMakeLists.txt  color.h  theme.c
src/draw/: CMakeLists.txt  color.c  color.h  draw.c  theme.c  theme.h
src/event/: callbacks.c
src/events/: CMakeLists.txt  callbacks.c  callbacks.h  event.h
src/glad/: CMakeLists.txt
src/input/: CMakeLists.txt  cursor.c  cursor.h  input.c  input.h  key.c
src/layout/: CMakeLists.txt  item.c  item.h  layout.c  layout.h  widget.c  widget.h
src/math/: CMakeLists.txt  math.c  math.h
src/monitors/: CMakeLists.txt  monitor.c
src/oui/: CMakeLists.txt  oui.c  oui.h
src/prop/: CMakeLists.txt  prop.c
src/props/: CMakeLists.txt  prop.c  prop.h  widgets.c  widgets.h
src/render/: CMakeLists.txt  color.c  color.h  icon.c  image.c  paint.c  path.c  render.c  render.h  state.c  style.c  text.c  theme.c  theme.h  transform.c  ui.c
src/tests/: CMakeLists.txt  README.md  app.c  bnd_oui_demo.c
src/theme/: CMakeLists.txt  color.c  color.h  theme.c  theme.h
src/time/: CMakeLists.txt
src/ui/: CMakeLists.txt  item.c  item.h  layout.c  ui.c  ui.h
src/widget/: CMakeLists.txt  widget.c  widget.h
src/window/: dialog.c  menu.c  menu.h  overlay.c  tree.c  window.c  window.h  workspace.c  workspace.h
src/windows/: CMakeLists.txt  dialog.c  dialog.h  menu.c  overlay.c  overlay.h  tree.c  window.c  window.h  workspace.c  workspace.h
tests/: CMakeLists.txt  README.md  app.c  bnd_oui_demo.c
